# social-metrics-exporter

./: .env.example  .gitignore  README.md  agent.md  gui_app.py  pyproject.toml  requirements.txt  run_gui.bat  run_gui_mac.command
Social Metrics Exporter.app/Contents/: Info.plist
Social Metrics Exporter.app/Contents/MacOS/: launcher
Social Metrics Exporter.app/Contents/Resources/: launch_gui.command
Social Metrics Exporter.app/Contents/Resources/app/input/: urls.example.txt
Social Metrics Exporter.app/Contents/Resources/app/src/: parser.py  scraper.py  social_parser.py
assets/: AppIcon.icns
scripts/: build_mac_app.py
src/: exporter.py  formulas.py  main.py  parser.py  sheet_reader.py  social_parser.py
tests/: test_core_flows.py
