[project]
name = "social-metrics-exporter"
version = "0.1.0"
description = "Local social post metrics exporter for CSV reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "flask>=3.0.3",
  "lxml>=5.2.1",
  "openpyxl>=3.1.5",
  "playwright>=1.45.0",
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
